--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,12 @@ node_modules
 
 # Optional REPL history
 .node_repl_history
+
+.grunt
+.lock-wscript
+build/Release
+node_modules
+.npm
+.node_repl_history
+public/vendor
+
