add quote pages

--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "mongoose": "^4.4.3"
+    "jade": "^1.11.0",
+    "mongoose": "^4.4.3",
+    "nodemon": "^1.8.1",
+    "request": "^2.69.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "bower": "^1.7.7"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "postinstall": "bower install && grunt build"
   },
   "repository": {
     "type": "git",
