--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "postinstall": "bower install && grunt build"
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
