--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "jade": "^1.11.0",
+    "moment": "^2.11.2",
+    "moment-parseformat": "^2.1.0",
     "mongoose": "^4.4.3",
     "nodemon": "^1.8.1",
     "request": "^2.69.0"
